fixed the alignement from the numbers and vector

--- a/css/style.css
+++ b/css/style.css
@@ -238,7 +238,9 @@ a:hover {
   padding-right: 88px;
   padding-left: 88px;
   text-align: center;
-  margin-top: 180px; }
+  margin-top: 180px;
+  display: flex;
+  flex-direction: column; }
   @media only screen and (max-width: 800px) {
     .section-Icenter {
       padding-right: 44px;
@@ -254,10 +256,11 @@ a:hover {
   color: #000; }
 
 .item-steps {
-  margin-top: 110px;
   display: flex;
-  justify-content: center;
+  margin-top: 110px;
+  justify-content: space-evenly;
   max-width: 1088px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto; }
   @media only screen and (max-width: 800px) {
@@ -265,31 +268,35 @@ a:hover {
       display: flex;
       max-width: 650px;
       margin-left: 0;
-      justify-content: center; } }
+      justify-content: space-evenly; } }
   @media only screen and (max-width: 620px) {
     .item-steps {
       display: flex;
       flex-direction: column;
-      align-items: center; } }
+      align-items: center;
+      justify-content: space-evenly; } }
   .item-steps > :first-child {
     padding-left: 0px; }
 
 .item-step {
   max-width: 280px;
   display: flex;
-  padding-left: 100px;
   color: black;
   align-items: center;
   cursor: pointer; }
   @media only screen and (max-width: 800px) {
     .item-step {
-      display: flex;
-      padding-left: 10px; } }
+      display: flex; } }
   @media only screen and (max-width: 620px) {
     .item-step {
       display: flex;
-      flex-direction: column;
-      padding-left: 0px; } }
+      flex-direction: column; } }
+
+.vec-container {
+  align-self: center; }
+  @media only screen and (max-width: 620px) {
+    .vec-container {
+      transform: rotate(90deg); } }
 
 .active-step {
   color: #de063a; }
@@ -436,7 +443,7 @@ a:hover {
   padding: 30px; }
 
 .card-items {
-  width: 85%;
+  max-width: 1244px;
   margin-left: auto;
   margin-right: auto;
   justify-content: space-evenly;
@@ -538,10 +545,6 @@ a:hover {
   font-size: 24px;
   cursor: pointer;
   transition: 0.4s; }
-
-.active,
-.question:hover {
-  background-color: #ccc; }
 
 .panel {
   padding: 0 18px;
