--- a/sass/layout/_sectiontoday.scss
+++ b/sass/layout/_sectiontoday.scss
@@ -34,7 +34,7 @@
   padding: 30px;
 }
 .card-items {
-  width: 85%;
+  max-width: 1244px;
   margin-left: auto;
   margin-right: auto;
   justify-content: space-evenly;
@@ -61,7 +61,7 @@
   @media only screen and (max-width: 820px) {
     grid-template-columns: auto;
     & > :first-child {
-        margin-bottom: 15px;
+      margin-bottom: 15px;
     }
     & > :last-child {
       grid-column: span 1;
@@ -144,10 +144,6 @@
   transition: 0.4s;
 }
 
-.active,
-.question:hover {
-  background-color: #ccc;
-}
 .panel {
   padding: 0 18px;
   background-color: white;
